# disco

./: .env.example  .gitignore  CONTRIBUTING.md  FILE_CLEANUP_RECOMMENDATIONS.md  Makefile  README.md  analyze_predictions.py  check_images.py  compute_embeddings_for_results.py  create_visr_bench_mini.py  download_missing_images.py  evaluation_metrics.md  example_line2_detection.py  experiments.md  extract_and_save_all.py  gen_docvqa_mini.py  gen_iam_mini.py  gen_iam_mini_v3.py  gen_infographicvqa_mini.py  llm_settings.py  pyproject.toml  reorganize_iam_mini.py  run_all_claude_benchmarks.py  run_claude_benchmarks.py  run_mistral_ocr_3_qa_benchmarks.py  test_mistral_api.py  upload_log.txt
benchmarks/: __init__.py  benchmark.py  benchmark_chartqapro.py
datasets/: README_small_scale_datasets.md  load_small_datasets.py
llms/: __init__.py  azure_client.py  azure_models.py  embedding_integration.py  embeddings.py  huggingface_client.py  llm_settings.py  mistral.md  mistral_ocr.py  models.md  prices.json
metrics/: embedding_cache.py  evaluation_metrics.py
mm/: 20251219.md
models/: __init__.py  anthropic_client.py  embeddings.py  mistral_client.py  settings.py  unified_api.py
ocr_vs_vlm/: api_calls.py  benchmark.py  benchmark_docvqa.py  benchmark_iammini.py  benchmark_infographicvqa.py  benchmark_publaynet.py  benchmark_voc2007.py  dataset_loaders.py  dataset_loaders_qa.py  evaluation_metrics.py  generate_embeddings.py  line2_detection.py  llm_call.ipynb  ocr_vs_vlm.md  retrieval.py  unified_model_api.py
prompts/: __init__.py
sandbox/: document_analysis.py  llm_call.py  output.md  test_hf.py
scripts/: run_benchmark.py
tests/: test_retrieval.py  (+2 more)
(+327 files in other folders)
