[project]
name = "research-playground"
version = "0.1.0"
description = "Playground to explore PoCs and research ideas"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "azure-ai-documentintelligence>=1.0.0",
    "transformers>=4.0.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "pillow>=10.0.0",
    "protobuf>=3.20.0",
    "sentencepiece>=0.1.99",
    "pdf2image>=1.16.0",
    "langchain",
    "langchain-openai",
    "langchain-huggingface",
    "langchain-community",
    "huggingface-hub>=0.0.0",
    "pandas>=2.3.3",
    "seaborn>=0.13.0",
    "editdistance>=0.8.1",
    "pyarrow>=21.0.0",
    "datasets>=4.4.2",
    "boto3>=1.42.27",
    "anthropic>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
